<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_class"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cl.philipsoft.wowcharselector.views.ClassActivity">

    <TextView
        android:id="@+id/classesTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_class"/>

    <RadioGroup
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/classesRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/classDruid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Druid" />

        <RadioButton
            android:id="@+id/classHunter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Hunter" />

        <RadioButton
            android:id="@+id/classMage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Mage" />

        <RadioButton
            android:id="@+id/classPaladin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Paladin" />

        <RadioButton
            android:id="@+id/classPriest"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Priest" />

        <RadioButton
            android:id="@+id/classRogue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Rogue" />

        <RadioButton
            android:id="@+id/classShaman"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Shaman" />

        <RadioButton
            android:id="@+id/classWarlock"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Warlock" />

        <RadioButton
            android:id="@+id/classWarrior"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Warrior" />

        <RadioButton
            android:id="@+id/classDeathKnight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_Death_Knight" />

    </RadioGroup>

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_character_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Nombre"
        android:ems="10"
        android:id="@+id/nameEt" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button"/>

</LinearLayout>
