<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.philipsoft.wowcharselector.views.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/instructionsFactionsTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:text="@string/instructions_faction"
        android:textColor="@color/textColorPrimary" />

    <LinearLayout
        android:id="@+id/linearLayoutFactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructionsFactionsTv"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioGroup
            android:id="@+id/factionsRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/factionAllianceRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/faction_alliance" />

            <RadioButton
                android:id="@+id/factionHordeRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/faction_horde" />

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/instructionsRacesTvTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutFactions"
        android:text="@string/instructions_race" />

    <LinearLayout
        android:id="@+id/linearLayoutRaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructionsRacesTvTv"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/racesAllianceRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/raceHumanRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_human" />

            <RadioButton
                android:id="@+id/raceDwarfRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_dwarf" />

            <RadioButton
                android:id="@+id/raceNightElfRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_Night_Elf" />

            <RadioButton
                android:id="@+id/raceGnomeRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_gnome" />

            <RadioButton
                android:id="@+id/raceDraeneiRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_Draenei" />

            <RadioButton
                android:id="@+id/raceWorgenRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_Worgen" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/racesHordeRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/raceOrcRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_Orc" />

            <RadioButton
                android:id="@+id/raceUndeadRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_Undead" />

            <RadioButton
                android:id="@+id/raceTaurenRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_Tauren" />

            <RadioButton
                android:id="@+id/raceTrollRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_Troll" />

            <RadioButton
                android:id="@+id/raceBloodElfRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_BloodElf" />

            <RadioButton
                android:id="@+id/raceGoblinRb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/race_Goblin" />

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/send_char_selection" />
</RelativeLayout>
